--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_remote_logger
 description: A comprehensive remote logging and profiling package for Flutter. Captures sessions, device info, and uploads logs to Firebase or custom backends.
-version: 0.0.1
+version: 0.0.1-beta1
 repository: https://github.com/infodreams-software/flutter-remote-logger
 
 environment:
