--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_remote_logger
 description: A comprehensive remote logging and profiling package for Flutter. Captures sessions, device info, and uploads logs to Firebase or custom backends.
-version: 0.2.1
+version: 0.2.2
 repository: https://github.com/infodreams-software/flutter-remote-logger
 
 environment:
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.5
   uuid: ^4.5.2
+  android_id: ^0.5.1
 
 dev_dependencies:
   flutter_test:
