--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_remote_logger
 description: A comprehensive remote logging and profiling package for Flutter. Captures sessions, device info, and uploads logs to Firebase or custom backends.
-version: 0.3.0
+version: 0.3.1
 repository: https://github.com/infodreams-software/flutter-remote-logger
 
 environment:
@@ -18,6 +18,7 @@ dependencies:
   path_provider: ^2.1.5
   uuid: ^4.5.2
   android_id: ^0.5.1
+  flutter_secure_storage: ^9.0.0
 
 
 dev_dependencies:
